fixed some layout issues

--- a/css/queries.css
+++ b/css/queries.css
@@ -105,7 +105,7 @@
   }
 
   #search{
-    top: 2rem;
+    top: 1rem;
   }
 
   #search::placeholder {
@@ -169,12 +169,17 @@ nav {
   }
 
   #search {
-    top: 2rem;
+    top: 1.7rem;
     width: 40%;
+    height: 3.5rem;
   }
 
   .search-results-container {
     width: 80%;
+  }
+
+  .favorites-icon {
+    margin-right: 4rem;
   }
 
   .favorites-icon span {
